2002-06-26  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: Bump requirements for libgnomeprint.
	* gdictsrc/gdict-app.c, gdictsrc/gdict-defbox.c,
	  gdictsrc/gdict-speller.c: Remove bogus libgnomeprint 
	  headers

2002-02-28  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in, */{doc,help}/eu/ : Added Basque help files.

2002-02-05  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_CN.GB2312 -> zh_CN

Thu Jan 31 20:43:45 2002  George Lebl <jirka@5z.com>

	* Release 1.4.1.2

2002-01-04  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): Added "eu".

Mon Dec 17 18:55:10 2001  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* Add Japanese help files of gfloppy
	* Add gfloppy/doc/ja/Makefile to configure.in

Wed Nov 21 06:49:49 2001  Abel Cheung  <maddog@linux.org.hk>

	* mini-utils/gshutdown/Makefile.am:
	* logview/Makefile.am:
	Added missing DESTDIR in install-data-local.

Sat Oct 20 11:42:00 2001  George Lebl <jirka@5z.com>

	* Release 1.4.1.1

	* gnome-utils.spec.in: further tweak the %files list

Sat Oct 20 11:33:50 2001  George Lebl <jirka@5z.com>

	* configure.in: raise version to 1.4.1.1, add cromagnon back

	* Makefile.am: make sure that cromagnon is part of the distribution

Sat Oct 20 11:23:03 2001  George Lebl <jirka@5z.com>

	* configure.in: fixes from bunk@fs.tum.de (Adrian Bunk)

	* gnome-utils.spec.in:  Fix the file list so that the rpm
	  doesn't want to own directories that are not it's own

Sun Oct 14 21:03:16 2001  Abel Cheung <maddog@linux.org.hk>

	* configure.in (GLADE_CFLAGS): Fix typo.

Fri Oct 05 11:31:04 2001  George Lebl <jirka@5z.com>

	* Release 1.4.1

Thu Oct 04 21:21:53 2001  George Lebl <jirka@5z.com>

	* logview/doc/C/Makefile.am: fix figures distribution

	* Makefile.am, configure.in: gtkhtml is optional, if
	  not found gtt will not be built.  Also make all the optional
	  directories always dist

Wed Oct 03 20:34:01 2001  George Lebl <jirka@5z.com>
