@@ -1,5 +1,10 @@
 2002-06-26  Glynn Foster  <glynn.foster@sun.com>
 
+	* gnome-utils.spec.in: Update with fixes from Dean Scott
+	  #55847.
+
+2002-06-26  Glynn Foster  <glynn.foster@sun.com>
+
 	* configure.in: Bump requirements for libgnomeprint.
 	* gdictsrc/gdict-app.c, gdictsrc/gdict-defbox.c,
 	  gdictsrc/gdict-speller.c: Remove bogus libgnomeprint 
